--- a/index.html
+++ b/index.html
@@ -4,8 +4,75 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="css/utilities.css">
+    <link rel="stylesheet" href="css/styles.css" />
     <title>TeamFour</title>
   </head>
-  <body></body>
+  <body>
+
+
+
+
+
+    <!-- Consultation form by Daniel BEGIN -->
+    <section class="showcase">
+      <div class="container grid">
+        <div class="showcase-text">
+          <h1>Better Consultation</h1>
+          <p>
+            Deploy web apps of all kinds, from large scale enterprise APIs to
+            static websites for individuals. Fill out the form to have a consultation
+            about our platform
+          </p>
+          <!-- <a href="features.html" class="btn btn-outline">=====></a> -->
+        </div>
+
+        <div class="showcase-form card">
+          <h2>Request a Consultation</h2>
+          <!--  <form name="contact" netlify-honeypot="bot-field" method="POST" data-netlify="true">
+              <input type="hidden" name="form-name" value="contact">
+              <p class="hidden">
+                  <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
+                </p>
+              <div class="form-control">
+                  <input type="text" name="name" placeholder="Name" required>
+              </div>
+              <div class="form-control">
+                  <input type="text" name="company" placeholder="Company Name" required>
+              </div>
+              <div class="form-control">
+                  <input type="email" name="email" placeholder="Email" required>
+              </div>
+              <input type="submit" value="Send" class="btn btn-primary">
+          </form> -->
+          <form>
+            <div class="form-control">
+              <input type="text" name="name" placeholder="Name" required />
+            </div>
+            <div class="form-control">
+              <input
+                type="text"
+                name="company"
+                placeholder="Company Name"
+                required
+              />
+            </div>
+            <div class="form-control">
+              <input type="email" name="email" placeholder="Email" required />
+            </div>
+            <input type="submit" value="Send" class="btn btn-primary" />
+          </form>
+        </div>
+      </div>
+    </section>
+    <!-- Consultation form by Daniel END -->
+
+
+
+
+
+
+
+  </body>
 </html>
