I'm adding my parts of ourservices to the HTML and CSS files in a new branch

--- a/index.html
+++ b/index.html
@@ -77,7 +77,35 @@
         </div>
       </div>
     </section>
-    <!-- Consultation form by Daniel END -->
+    <!-- Adding our services part by Momain -->
+    <section class="stats">
+      <div class="container">
+          <h2 class="stats-heading text-center my-1">
+             Welcome Our Services</h2> <br>
+          <h3 class="stats-heading text-center my-1">
+              cloud4 Software Development & Design We provide custom software that’s stable, scalable, and secure. Human-centered and easy to use. Expertly tailored around your business goals.
+          </h3>
+
+          <div class="grid grid-3 text-center my-4">
+              <div>
+                  <i class="fab fa-internet-explorer fa-3x"></i>
+                  <h3>10,349,405</h3>
+                  <p class="text-secondary">Web App Capabilities</p>
+              </div>
+              <div>
+                  <i class="fas fa-mobile-alt fa-3x"></i>
+                  <h3>1,246,105</h3>
+                  <p class="text-secondary">Mobile App Capabilities</p>
+              </div>
+              <div>
+                  </i><i class="fas fa-desktop fa-3x"></i>
+                  <h3>2,343,265</h3>
+                  <p class="text-secondary">Desktop App Capabilities</p>
+              </div>
+          </div>
+      </div>
+  </section>
+  <!-- Moamin part is finished-->
 
 
 
