--- a/gall.html
+++ b/gall.html
@@ -17,7 +17,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="https://bringmetheaxx.github.io/TeamFour/gallery.html">Gallery</a></li>
                 <li><a href="contact.html">Contact Info</a></li>
             </ul>
         </nav>
