--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <nav>
               <ul>
                   <li><a href="index.html">Home</a></li>
-                  <li><a href="gallery.html">Gallery</a></li>
+                  <li><a href="https://bringmetheaxx.github.io/TeamFour/gallery.html">Gallery</a></li>
                   <li><a href="contact.html">Contact</a></li>
               </ul>
           </nav>
