--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,116 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="css/utilities.css">
+    <link rel="stylesheet" href="css/styles.css" />
+    <!-- Add by Axil begin --> 
+    <title>cloud4 | storage 4 life</title>
+</head>
+<body>
+    <h1>cloud4</h1>
 
+<div class="navbar">
+    <div class="container flex">
+        <nav>
+        <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        </ul>
+        </nav>
+    </div>
+</div>
+<section class="showcase">
+    <div class="container grid">
+<div class="showcase-text">
+        <h2>Contact</h2>
+        <p>
+            We would love to hear about you. <br>
+            Contact us and we will do our best <br>
+            to take you into the cloud4. 
+        </p>
+</div>
+
+<div class="showcase-form card">
+    <h3>Contact Form</h3>
+        <form>
+        <div class="form-control">
+            <input type="text" name="name" placeholder="Name" required />
+        </div>
+        <div class="form-control">
+            <input
+            type="text"
+            name="phone"
+            placeholder="Phone Number"
+            required
+            />
+        </div>
+        <div class="form-control">
+            <input type="email" name="email" placeholder="Email" required />
+            <div class="form-control">
+                <input type="text" name="wcwdfy" placeholder="What can we do for you?" required />
+            </div>
+        </div>
+        <input type="submit" value="Send" class="btn btn-primary" />
+        </form>
+    </div>
+</div>
+</section>
+<section class="stats">
+    <div class="container">
+        <h2 class="stats-heading text-center my-1">
+        Bring yourself to cloud4</h2> <br>
+        <h3 class="stats-heading text-center my-1">
+            Here in cloud4 we have everything you need.<br>
+            With the best and friendly support.<br>
+            Contact us to get the best<br>
+            for your company.
+        </h3>
+
+        <div class="grid grid-3 text-center my-4">
+            <div>
+                <i class="fab fa-whatsapp-square fa-3x"></i>
+                <h3>24/7</h3>
+                <p class="text-secondary">With the best support team</p>
+            </div>
+            <div>
+                <i class="fas fa-money-bill fa-3x"></i>
+                <h3>Affordable</h3>
+                <p class="text-secondary">The best solution<br>
+                    with the best price
+                </p>
+            </div>
+            <div>
+                </i><i class="fas fa-award fa-3x"></i>
+                <h3>Respected</h3>
+                <p class="text-secondary">Ellected 3 times<br>
+                the best cloud solution by<br>
+                the VOMH.
+            </p>
+            </div>
+        </div>
+    </div>
+</section>
+<footer class="footer bg-dark py-5">
+    <div class="container grid grid-3">
+        <div>
+            <h1>cloud4
+            </h1>
+            <p>Copyright &copy; 2021</p>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+</footer>
+</body>
+</html>
+<!-- Add by Axil end -->
