--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <!-- Add by Áxil end-->
     
     <!-- Consultation form by Daniel BEGIN -->
+ 
     <section class="showcase">
       <div class="container grid">
         <div class="showcase-text">
@@ -107,6 +108,19 @@
   </section>
   <!-- Moamin part is finished-->
 
+
+   <!--Tatsiana part -->
+   <section class="cloud bg-primary my-2 py-2">
+    <div class="container grid">
+        <div class="text-center">
+            <h2 class="lg">Extreme Cloud Hosting</h2>
+            <p class="lead my-1">Cloud hosting like you've never seen. Fast, efficient and scalable</p>
+            <a href="features.html" class="btn btn-dark">Read More</a>
+        </div>
+        <img src="images/Cloud.png" alt="">
+    </div>
+</section>
+<!--Tatsiana part is finished-->
 
 
 
