--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <ul>
                   <li><a href="index.html">Home</a></li>
                   <li><a href="gallery.html">Gallery</a></li>
-                  <li><a href="contact.html">Contact</a></li>
+                  <li><a href="contact.html">Contact Info</a></li>
               </ul>
           </nav>
       </div>
@@ -77,36 +77,32 @@
         </div>
       </div>
     </section>
-    <!-- Adding our services part by Momain -->
-    <section class="stats">
-      <div class="container">
-          <h2 class="stats-heading text-center my-1">
-             Welcome Our Services</h2> <br>
-          <h3 class="stats-heading text-center my-1">
-              cloud4 Software Development & Design We provide custom software that’s stable, scalable, and secure. Human-centered and easy to use. Expertly tailored around your business goals.
-          </h3>
+    <!-- Consultation form by Daniel END -->
+<!----Footer added by Senait begins----->
 
-          <div class="grid grid-3 text-center my-4">
-              <div>
-                  <i class="fab fa-internet-explorer fa-3x"></i>
-                  <h3>10,349,405</h3>
-                  <p class="text-secondary">Web App Capabilities</p>
-              </div>
-              <div>
-                  <i class="fas fa-mobile-alt fa-3x"></i>
-                  <h3>1,246,105</h3>
-                  <p class="text-secondary">Mobile App Capabilities</p>
-              </div>
-              <div>
-                  </i><i class="fas fa-desktop fa-3x"></i>
-                  <h3>2,343,265</h3>
-                  <p class="text-secondary">Desktop App Capabilities</p>
-              </div>
+    <footer class="footer bg-dark py-5">
+      <div class="container grid grid-3">
+          <div>
+              <h1>Loruki
+              </h1>
+              <p>Copyright © 2020</p>
+          </div>
+          <nav>
+              <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="features.html">Features</a></li>
+                  <li><a href="docs.html">Docs</a></li>
+              </ul>
+          </nav>
+          <div class="social">
+              <a href="#"><i class="fab fa-github fa-2x"></i></a>
+              <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+              <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+              <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
           </div>
       </div>
-  </section>
-  <!-- Moamin part is finished-->
-
+  </footer>
+<!---Footer add by Senait Ends---------->
 
 
 
