--- a/index.html
+++ b/index.html
@@ -84,7 +84,11 @@
           <h2 class="stats-heading text-center my-1">
              Welcome Our Services</h2> <br>
           <h3 class="stats-heading text-center my-1">
-              cloud4 Software Development & Design We provide custom software that’s stable, scalable, and secure. Human-centered and easy to use. Expertly tailored around your business goals.
+              cloud4 Software Development & Design <br>
+              We provide custom software that’s stable,<br>
+              scalable, and secure. Human-centered and<br>
+              easy to use. Expertly tailored around your<br>
+              business goals.
           </h3>
 
           <div class="grid grid-3 text-center my-4">
@@ -132,8 +136,8 @@
       <nav>
           <ul>
               <li><a href="index.html">Home</a></li>
-              <li><a href="features.html">Features</a></li>
-              <li><a href="docs.html">Docs</a></li>
+              <li><a href="gallery.html">Gallery</a></li>
+              <li><a href="contact.html">Contact</a></li>
           </ul>
       </nav>
       <div class="social">
@@ -144,9 +148,5 @@
       </div>
   </div>
 </footer>
-
-
-
-
-  </body>
+</body>
 </html>
