updating to make a costumer testimony
just small things

--- a/gallery.html
+++ b/gallery.html
@@ -10,7 +10,7 @@
     <title>cloud4 | storage 4 life</title>
 </head>
 <body>
-  <h1>cloud4</h1>
+<h1>cloud4</h1>
 
 <div class="navbar">
     <div class="container flex">
@@ -41,37 +41,46 @@
     <section class="features-main my-2">
         <div class="container grid grid-3">
             <div class="card flex">
-                <i class="fas fa-server fa-3x"></i>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                <i class="fas fa-shopping-bag fa-3x"></i>
+                <p>"cloud4 is like a family to,<br>
+                    they helped to put my wig<br>
+                    shop in the internet"<br>
+                    Stacy, 1 year in the cloud4 
+                </p>    
             </div>
             <div class="card flex">
-                <i class="fas fa-network-wired fa-3x"></i>
-                <p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                <i class="fas fa-gamepad fa-3x"></i>
+                <p>"Good price<br>
+                    I have my own streaming plataform now"<br>
+                    Bob, 3 months in the cloud4 
                 </p>
             </div>
             <div class="card flex">
                 <i class="fas fa-laptop-code fa-3x"></i>
-                <p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                <p>"Friendly and<br>
+                    always available support"<br>
+                    Juno, 2 years in the cloud4
                 </p>
             </div>
             <div class="card flex">
-                <i class="fas fa-database fa-3x"></i>
-                <p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                <i class="fas fa-lock fa-3x"></i>
+                <p>"Safety is very important<br>
+                    and I have that in cloud4"<br>
+                    Julia, 7 months in the cloud4 
                 </p>
             </div>
             <div class="card flex">
-                <i class="fas fa-power-off fa-3x"></i>
-                <p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                <i class="fas fa-phone fa-3x"></i>
+                <p>"Their app is amazing"<br>
+                Kelly, 2 months in the cloud4 
                 </p>
             </div>
             <div class="card flex">
-                <i class="fas fa-upload fa-3x"></i>
+                <i class="fas fa-glasses fa-3x"></i>
                 <p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                <p>"Now that I am online<br>
+                    my sales are skyrocketing"<br>
+                    Karina, 6 months in the cloud4
                 </p>
             </div>
         </div>
@@ -88,8 +97,8 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="features.html">Features</a></li>
-                    <li><a href="docs.html">Docs</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
             <div class="social">
@@ -99,7 +108,7 @@
                 <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
             </div>
         </div>
-      </footer>
+    </footer>
 
 </body>
 </html>
