--- a/gallery.html
+++ b/gallery.html
@@ -46,41 +46,44 @@
                     they helped to put my wig<br>
                     shop in the internet"<br>
                     Stacy, 1 year in the cloud4 
-                </p>    
             </div>
             <div class="card flex">
                 <i class="fas fa-gamepad fa-3x"></i>
+                <p>
                 <p>"Good price<br>
                     I have my own streaming plataform now"<br>
-                    Bob, 3 months in the cloud4 
+                    Bob, 3 months in the cloud4  
                 </p>
             </div>
             <div class="card flex">
                 <i class="fas fa-laptop-code fa-3x"></i>
+                <p>
                 <p>"Friendly and<br>
                     always available support"<br>
-                    Juno, 2 years in the cloud4
+                    Juno, 2 years in the cloud4 
                 </p>
             </div>
             <div class="card flex">
                 <i class="fas fa-lock fa-3x"></i>
-                <p>"Safety is very important<br>
+                <p>
+                <p>Safety is very important<br>
                     and I have that in cloud4"<br>
                     Julia, 7 months in the cloud4 
                 </p>
             </div>
             <div class="card flex">
-                <i class="fas fa-phone fa-3x"></i>
-                <p>"Their app is amazing"<br>
-                Kelly, 2 months in the cloud4 
+                <i class="fas fa-glasses fa-3x"></i>
+                <p>
+                <p>Now that I am online<br>
+                    my sales are skyrocketing"<br>
+                    Karina, 6 months in the cloud4 
                 </p>
             </div>
             <div class="card flex">
-                <i class="fas fa-glasses fa-3x"></i>
+                <i class="fas fa-app-store-ios fa-3x"></i>
                 <p>
-                <p>"Now that I am online<br>
-                    my sales are skyrocketing"<br>
-                    Karina, 6 months in the cloud4
+                <p>"Their app is amazing"<br>
+                    Kelly, 2 months in the cloud4  
                 </p>
             </div>
         </div>
